feat(Thumbnailator) : 썸네일 DTO 변환 추가